--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://i.pinimg.com/favicons/cbc6ccb5753d1a31a458522324aa8d3605d3a3f04b40284064787265.ico?94090f4fa94092e66a1b9480cd1a6b37">
+    <link rel="icon"
+        href="https://i.pinimg.com/favicons/cbc6ccb5753d1a31a458522324aa8d3605d3a3f04b40284064787265.ico?94090f4fa94092e66a1b9480cd1a6b37">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
@@ -17,29 +19,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <title>Resume - Theme Preview</title>
 </head>
+
 <body>
     <div class="navbar">
-        <a href="#about"><img src="https://startbootstrap.github.io/startbootstrap-resume/assets/img/profile.jpg" alt=""></a>
+        <a href="#about"><img src="https://startbootstrap.github.io/startbootstrap-resume/assets/img/profile.jpg"
+                alt=""></a>
         <ul><b>
-            <li><a href="#about" class="active">ABOUT</a></li>
-            <li><a href="#experience">EXPERIENCE</a></li>
-            <li><a href="#education">EDUCATION</a></li>
-            <li><a href="#skills">SKILLS</a></li>
-            <li><a href="#interests">INTERESTS</a></li>
-            <li><a href="#awards">AWARDS</a></li>
-        </b></ul>
+                <li><a href="#about" class="active">ABOUT</a></li>
+                <li><a href="#experience">EXPERIENCE</a></li>
+                <li><a href="#education">EDUCATION</a></li>
+                <li><a href="#skills">SKILLS</a></li>
+                <li><a href="#interests">INTERESTS</a></li>
+                <li><a href="#awards">AWARDS</a></li>
+            </b></ul>
     </div>
     <div class="about" id="about">
         <h1>
-            CLARENCE <span>TAYLOR</span> 
+            CLARENCE <span>TAYLOR</span>
         </h1>
         <h2>
-            3542 BERRY STREET · CHEYENNE WELLS, CO 80810 · (317) 585-8468 · <a href="#">NAME@EMAIL.COM</a> 
+            3542 BERRY STREET · CHEYENNE WELLS, CO 80810 · (317) 585-8468 · <a href="#">NAME@EMAIL.COM</a>
         </h2>
         <p>
-            I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. 
-            Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+            I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews.
+            Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+            proposition.
         </p>
+        <img src="images/icons.JPG" alt="">
     </div>
     <hr>
 
@@ -49,31 +55,38 @@
         <h3>SENIOR WEB DEVELOPER <span>March 2013 - Present</span></h3>
         <h4>INTELITEC SOLUTIONS</h4>
         <p>
-            Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, 
-            a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User 
+            Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going
+            forward,
+            a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud
+            solution. User
             generated content in real-time will have multiple touchpoints for offshoring.
         </p>
 
         <h3>WEB DEVELOPER <span>December 2011 - March 2013</span></h3>
         <h4>INTELITEC SOLUTIONS</h4>
         <p>
-            Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide 
-            with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop 
+            Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the
+            digital divide
+            with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close
+            the loop
             on focusing solely on the bottom line.
         </p>
 
         <h3>JUNIOR WEB DESIGNER <span>July 2010 - December 2011</span></h3>
         <h4>SHOUT! MEDIA PRODUCTIONS</h4>
         <p>
-            Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance 
-            indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up 
+            Podcasting operational change management inside of workflows to establish a framework. Taking seamless key
+            performance
+            indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on
+            the start-up
             mentality to derive convergence on cross-platform integration.
         </p>
 
         <h3>WEB DESIGN INTERN <span>September 2008 - June 2010</span></h3>
         <h4>SHOUT! MEDIA PRODUCTIONS</h4>
         <p>
-            Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after 
+            Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C
+            users after
             installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
         </p>
     </div>
@@ -96,6 +109,7 @@
     <div class="skills" id="skills">
         <h2>SKILLS</h2>
         <h4>PROGRAMMING LANGUAGES & TOOLS</h4>
+        <img src="images/Capture.JPG" alt="">
         <h4>WORKFLOW</h4>
         <ul>
             <li>Mobile-First, Responsive Design</li>
@@ -108,10 +122,13 @@
     <div class="interests" id="interests">
         <h2>INTERESTS</h2>
         <p>
-            Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. 
+            Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier
+            and novice ice climber.
             During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking. <br><br>
-            When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, 
-            and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.
+            When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an
+            aspiring chef,
+            and I spend a large amount of my free time exploring the latest technology advancements in the front-end web
+            development world.
         </p>
     </div>
     <hr>
@@ -129,4 +146,5 @@
         </ul>
     </div>
 </body>
+
 </html>
